--- a/English.lproj/ExportPatchesSheet.xib
+++ b/English.lproj/ExportPatchesSheet.xib
@@ -2,16 +2,16 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
   <data>
     <int key="IBDocument.SystemTarget">1060</int>
-    <string key="IBDocument.SystemVersion">11B26</string>
+    <string key="IBDocument.SystemVersion">11C74</string>
     <string key="IBDocument.InterfaceBuilderVersion">851</string>
-    <string key="IBDocument.AppKitVersion">1138</string>
-    <string key="IBDocument.HIToolboxVersion">566.00</string>
+    <string key="IBDocument.AppKitVersion">1138.23</string>
+    <string key="IBDocument.HIToolboxVersion">567.00</string>
     <dictionary class="NSMutableDictionary" key="IBDocument.PluginVersions">
       <string key="com.apple.InterfaceBuilder.CocoaPlugin">851</string>
       <string key="com.brandonwalkin.BWToolkit">1.2.2</string>
     </dictionary>
     <array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-      <integer value="60"/>
+      <integer value="35"/>
     </array>
     <array key="IBDocument.PluginDependencies">
       <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -684,59 +684,6 @@
                 <int key="NSPeriodicInterval">25</int>
               </object>
             </object>
-            <object class="BWGradientBox" id="929352984">
-              <reference key="NSNextResponder" ref="803546326"/>
-              <int key="NSvFlags">266</int>
-              <array class="NSMutableArray" key="NSSubviews">
-                <object class="NSTextField" id="576477867">
-                  <reference key="NSNextResponder" ref="929352984"/>
-                  <int key="NSvFlags">266</int>
-                  <string key="NSFrame">{{17, 15}, {795, 22}}</string>
-                  <reference key="NSSuperview" ref="929352984"/>
-                  <bool key="NSEnabled">YES</bool>
-                  <object class="NSTextFieldCell" key="NSCell" id="73349910">
-                    <int key="NSCellFlags">68288064</int>
-                    <int key="NSCellFlags2">138413056</int>
-                    <string key="NSContents">Export Patches</string>
-                    <object class="NSFont" key="NSSupport">
-                      <string key="NSName">LucidaGrande</string>
-                      <double key="NSSize">18</double>
-                      <int key="NSfFlags">16</int>
-                    </object>
-                    <reference key="NSControlView" ref="576477867"/>
-                    <reference key="NSBackgroundColor" ref="435704360"/>
-                    <reference key="NSTextColor" ref="1032412444"/>
-                  </object>
-                </object>
-              </array>
-              <string key="NSFrame">{{-1, 603}, {833, 51}}</string>
-              <reference key="NSSuperview" ref="803546326"/>
-              <object class="NSColor" key="BWGBFillStartingColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC43MTU2NjA2OTEzIDAuNzY0NTY2MzYxOSAwLjgxMDQ4Mzg3MjkAA</bytes>
-              </object>
-              <object class="NSColor" key="BWGBFillEndingColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC41MTM3NjcxODI4IDAuNTY4NDkwNTA1MiAwLjYxNzM0Njk0MjQAA</bytes>
-              </object>
-              <object class="NSColor" key="BWGBFillColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC44NzQ1MDk4MTE0IDAuODk0MTE3NjUzNCAwLjkxNzY0NzA2MzcAA</bytes>
-              </object>
-              <object class="NSColor" key="BWGBTopBorderColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC41NTc2NjQ2OTI0IDAuNTk4ODkyNTA5OSAwLjY0Mjg1NzEzNDMAA</bytes>
-              </object>
-              <object class="NSColor" key="BWGBBottomBorderColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC40Mjc4NDM2NjAxIDAuNDc5NDI1MTYyMSAwLjUyMDQwODE1MzUAA</bytes>
-              </object>
-              <bool key="BWGBHasTopBorder">NO</bool>
-              <bool key="BWGBHasBottomBorder">YES</bool>
-              <bool key="BWGBHasGradient">YES</bool>
-              <float key="BWGBTopInsetAlpha">0.30000001192092896</float>
-              <float key="BWGBBottomInsetAlpha">0.0</float>
-            </object>
             <object class="NSTextField" id="841911001">
               <reference key="NSNextResponder" ref="803546326"/>
               <int key="NSvFlags">289</int>
@@ -999,6 +946,36 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
                 <int key="NSPeriodicDelay">200</int>
                 <int key="NSPeriodicInterval">25</int>
               </object>
+            </object>
+            <object class="NSCustomView" id="1038238167">
+              <reference key="NSNextResponder" ref="803546326"/>
+              <int key="NSvFlags">266</int>
+              <array class="NSMutableArray" key="NSSubviews">
+                <object class="NSTextField" id="576477867">
+                  <reference key="NSNextResponder" ref="1038238167"/>
+                  <int key="NSvFlags">266</int>
+                  <string key="NSFrame">{{19, 14}, {795, 22}}</string>
+                  <reference key="NSSuperview" ref="1038238167"/>
+                  <bool key="NSEnabled">YES</bool>
+                  <object class="NSTextFieldCell" key="NSCell" id="73349910">
+                    <int key="NSCellFlags">68288064</int>
+                    <int key="NSCellFlags2">138413056</int>
+                    <string key="NSContents">Export Patches</string>
+                    <object class="NSFont" key="NSSupport">
+                      <string key="NSName">LucidaGrande</string>
+                      <double key="NSSize">18</double>
+                      <int key="NSfFlags">16</int>
+                    </object>
+                    <reference key="NSControlView" ref="576477867"/>
+                    <reference key="NSBackgroundColor" ref="435704360"/>
+                    <reference key="NSTextColor" ref="1032412444"/>
+                  </object>
+                </object>
+              </array>
+              <string key="NSFrame">{{-1, 603}, {833, 51}}</string>
+              <reference key="NSSuperview" ref="803546326"/>
+              <string key="NSReuseIdentifierKey">_NS:1109</string>
+              <string key="NSClassName">GradientBox</string>
             </object>
           </array>
           <string key="NSFrameSize">{831, 653}</string>
@@ -1279,7 +1256,6 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
               <reference ref="766248391"/>
               <reference ref="14778485"/>
               <reference ref="823002813"/>
-              <reference ref="929352984"/>
               <reference ref="715708594"/>
               <reference ref="867765666"/>
               <reference ref="584481268"/>
@@ -1292,6 +1268,7 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
               <reference ref="376526184"/>
               <reference ref="52974577"/>
               <reference ref="480348684"/>
+              <reference ref="1038238167"/>
             </array>
             <reference key="parent" ref="471338142"/>
           </object>
@@ -1450,27 +1427,6 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
             <int key="objectID">79</int>
             <reference key="object" ref="521697749"/>
             <reference key="parent" ref="823002813"/>
-          </object>
-          <object class="IBObjectRecord">
-            <int key="objectID">109</int>
-            <reference key="object" ref="929352984"/>
-            <array class="NSMutableArray" key="children">
-              <reference ref="576477867"/>
-            </array>
-            <reference key="parent" ref="803546326"/>
-          </object>
-          <object class="IBObjectRecord">
-            <int key="objectID">110</int>
-            <reference key="object" ref="576477867"/>
-            <array class="NSMutableArray" key="children">
-              <reference ref="73349910"/>
-            </array>
-            <reference key="parent" ref="929352984"/>
-          </object>
-          <object class="IBObjectRecord">
-            <int key="objectID">111</int>
-            <reference key="object" ref="73349910"/>
-            <reference key="parent" ref="576477867"/>
           </object>
           <object class="IBObjectRecord">
             <int key="objectID">38</int>
@@ -1731,6 +1687,27 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
             <reference key="object" ref="880287521"/>
             <reference key="parent" ref="761775646"/>
           </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">182</int>
+            <reference key="object" ref="1038238167"/>
+            <array class="NSMutableArray" key="children">
+              <reference ref="576477867"/>
+            </array>
+            <reference key="parent" ref="803546326"/>
+          </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">110</int>
+            <reference key="object" ref="576477867"/>
+            <array class="NSMutableArray" key="children">
+              <reference ref="73349910"/>
+            </array>
+            <reference key="parent" ref="1038238167"/>
+          </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">111</int>
+            <reference key="object" ref="73349910"/>
+            <reference key="parent" ref="576477867"/>
+          </object>
         </array>
       </object>
       <dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1738,8 +1715,10 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
         <string key="107.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="108.CustomClassName">LogGraphCell</string>
         <string key="108.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-        <string key="109.IBPluginDependency">com.brandonwalkin.BWToolkit</string>
         <string key="110.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <object class="NSAffineTransform" key="110.IBViewBoundsToFrameTransform">
+          <bytes key="NSTransformStruct">P4AAAL+AAABAwAAAxBRAAA</bytes>
+        </object>
         <string key="111.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="114.CustomClassName">CommandKeyTextField</string>
         <string key="114.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1810,6 +1789,7 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
         <string key="172.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="173.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="181.CustomClassName">LogTableTextFieldCell</string>
+        <string key="182.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="34.IBEditorWindowLastContentRect">{{114, 326}, {831, 653}}</string>
         <string key="34.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="34.IBWindowTemplateEditedContentRect">{{114, 326}, {831, 653}}</string>
@@ -1863,7 +1843,7 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
       <nil key="activeLocalization"/>
       <dictionary class="NSMutableDictionary" key="localizations"/>
       <nil key="sourceID"/>
-      <int key="maxID">181</int>
+      <int key="maxID">182</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2084,14 +2064,6 @@ dmlzaW9uIG51bWJlcgolaCAgIHNob3J0LWZvcm0gY2hhbmdlc2V0IGhhc2g</string>
         </object>
       </array>
       <array class="NSMutableArray" key="referencedPartialClassDescriptionsV3.2+">
-        <object class="IBPartialClassDescription">
-          <string key="className">BWGradientBox</string>
-          <string key="superclassName">NSView</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">BWToolkitFramework.framework/Headers/BWGradientBox.h</string>
-          </object>
-        </object>
         <object class="IBPartialClassDescription">
           <string key="className">BWSplitView</string>
           <string key="superclassName">NSSplitView</string>
