--- a/English.lproj/MergeSheet.xib
+++ b/English.lproj/MergeSheet.xib
@@ -2,16 +2,16 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
   <data>
     <int key="IBDocument.SystemTarget">1060</int>
-    <string key="IBDocument.SystemVersion">11B26</string>
+    <string key="IBDocument.SystemVersion">11C74</string>
     <string key="IBDocument.InterfaceBuilderVersion">851</string>
-    <string key="IBDocument.AppKitVersion">1138</string>
-    <string key="IBDocument.HIToolboxVersion">566.00</string>
+    <string key="IBDocument.AppKitVersion">1138.23</string>
+    <string key="IBDocument.HIToolboxVersion">567.00</string>
     <dictionary class="NSMutableDictionary" key="IBDocument.PluginVersions">
       <string key="com.apple.InterfaceBuilder.CocoaPlugin">851</string>
       <string key="com.brandonwalkin.BWToolkit">1.2.2</string>
     </dictionary>
     <array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-      <integer value="174"/>
+      <integer value="149"/>
     </array>
     <array key="IBDocument.PluginDependencies">
       <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -684,59 +684,6 @@
                 <int key="NSPeriodicInterval">25</int>
               </object>
             </object>
-            <object class="BWGradientBox" id="1064058394">
-              <reference key="NSNextResponder" ref="175589374"/>
-              <int key="NSvFlags">266</int>
-              <array class="NSMutableArray" key="NSSubviews">
-                <object class="NSTextField" id="1063295075">
-                  <reference key="NSNextResponder" ref="1064058394"/>
-                  <int key="NSvFlags">266</int>
-                  <string key="NSFrame">{{17, 15}, {797, 22}}</string>
-                  <reference key="NSSuperview" ref="1064058394"/>
-                  <bool key="NSEnabled">YES</bool>
-                  <object class="NSTextFieldCell" key="NSCell" id="767558747">
-                    <int key="NSCellFlags">68288064</int>
-                    <int key="NSCellFlags2">138413056</int>
-                    <string key="NSContents">Merge Revisions</string>
-                    <object class="NSFont" key="NSSupport">
-                      <string key="NSName">LucidaGrande</string>
-                      <double key="NSSize">18</double>
-                      <int key="NSfFlags">16</int>
-                    </object>
-                    <reference key="NSControlView" ref="1063295075"/>
-                    <reference key="NSBackgroundColor" ref="174268409"/>
-                    <reference key="NSTextColor" ref="291829360"/>
-                  </object>
-                </object>
-              </array>
-              <string key="NSFrame">{{-1, 632}, {835, 51}}</string>
-              <reference key="NSSuperview" ref="175589374"/>
-              <object class="NSColor" key="BWGBFillStartingColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC43MTU2NjA2OTEzIDAuNzY0NTY2MzYxOSAwLjgxMDQ4Mzg3MjkAA</bytes>
-              </object>
-              <object class="NSColor" key="BWGBFillEndingColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC41MTM3NjcxODI4IDAuNTY4NDkwNTA1MiAwLjYxNzM0Njk0MjQAA</bytes>
-              </object>
-              <object class="NSColor" key="BWGBFillColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC44NzQ1MDk4MTE0IDAuODk0MTE3NjUzNCAwLjkxNzY0NzA2MzcAA</bytes>
-              </object>
-              <object class="NSColor" key="BWGBTopBorderColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC41NTc2NjQ2OTI0IDAuNTk4ODkyNTA5OSAwLjY0Mjg1NzEzNDMAA</bytes>
-              </object>
-              <object class="NSColor" key="BWGBBottomBorderColor">
-                <int key="NSColorSpace">1</int>
-                <bytes key="NSRGB">MC40Mjc4NDM2NjAxIDAuNDc5NDI1MTYyMSAwLjUyMDQwODE1MzUAA</bytes>
-              </object>
-              <bool key="BWGBHasTopBorder">NO</bool>
-              <bool key="BWGBHasBottomBorder">YES</bool>
-              <bool key="BWGBHasGradient">YES</bool>
-              <float key="BWGBTopInsetAlpha">0.30000001192092896</float>
-              <float key="BWGBBottomInsetAlpha">0.0</float>
-            </object>
             <object class="NSTextField" id="891071149">
               <reference key="NSNextResponder" ref="175589374"/>
               <int key="NSvFlags">289</int>
@@ -837,6 +784,36 @@
                 <int key="NSPeriodicDelay">200</int>
                 <int key="NSPeriodicInterval">25</int>
               </object>
+            </object>
+            <object class="NSCustomView" id="934562509">
+              <reference key="NSNextResponder" ref="175589374"/>
+              <int key="NSvFlags">266</int>
+              <array class="NSMutableArray" key="NSSubviews">
+                <object class="NSTextField" id="1063295075">
+                  <reference key="NSNextResponder" ref="934562509"/>
+                  <int key="NSvFlags">266</int>
+                  <string key="NSFrame">{{19, 14}, {797, 22}}</string>
+                  <reference key="NSSuperview" ref="934562509"/>
+                  <bool key="NSEnabled">YES</bool>
+                  <object class="NSTextFieldCell" key="NSCell" id="767558747">
+                    <int key="NSCellFlags">68288064</int>
+                    <int key="NSCellFlags2">138413056</int>
+                    <string key="NSContents">Merge Revisions</string>
+                    <object class="NSFont" key="NSSupport">
+                      <string key="NSName">LucidaGrande</string>
+                      <double key="NSSize">18</double>
+                      <int key="NSfFlags">16</int>
+                    </object>
+                    <reference key="NSControlView" ref="1063295075"/>
+                    <reference key="NSBackgroundColor" ref="174268409"/>
+                    <reference key="NSTextColor" ref="291829360"/>
+                  </object>
+                </object>
+              </array>
+              <string key="NSFrame">{{-1, 632}, {835, 51}}</string>
+              <reference key="NSSuperview" ref="175589374"/>
+              <string key="NSReuseIdentifierKey">_NS:1109</string>
+              <string key="NSClassName">GradientBox</string>
             </object>
           </array>
           <string key="NSFrameSize">{833, 682}</string>
@@ -1027,7 +1004,6 @@
               <reference ref="155130934"/>
               <reference ref="387147098"/>
               <reference ref="521837655"/>
-              <reference ref="1064058394"/>
               <reference ref="235547652"/>
               <reference ref="629839994"/>
               <reference ref="891071149"/>
@@ -1035,6 +1011,7 @@
               <reference ref="140651989"/>
               <reference ref="488857267"/>
               <reference ref="392925418"/>
+              <reference ref="934562509"/>
             </array>
             <reference key="parent" ref="90604390"/>
           </object>
@@ -1298,27 +1275,6 @@
             <reference key="parent" ref="235547652"/>
           </object>
           <object class="IBObjectRecord">
-            <int key="objectID">214</int>
-            <reference key="object" ref="1064058394"/>
-            <array class="NSMutableArray" key="children">
-              <reference ref="1063295075"/>
-            </array>
-            <reference key="parent" ref="175589374"/>
-          </object>
-          <object class="IBObjectRecord">
-            <int key="objectID">215</int>
-            <reference key="object" ref="1063295075"/>
-            <array class="NSMutableArray" key="children">
-              <reference ref="767558747"/>
-            </array>
-            <reference key="parent" ref="1064058394"/>
-          </object>
-          <object class="IBObjectRecord">
-            <int key="objectID">216</int>
-            <reference key="object" ref="767558747"/>
-            <reference key="parent" ref="1063295075"/>
-          </object>
-          <object class="IBObjectRecord">
             <int key="objectID">225</int>
             <reference key="object" ref="891071149"/>
             <array class="NSMutableArray" key="children">
@@ -1401,6 +1357,27 @@
             <reference key="object" ref="1041158162"/>
             <reference key="parent" ref="0"/>
           </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">247</int>
+            <reference key="object" ref="934562509"/>
+            <array class="NSMutableArray" key="children">
+              <reference ref="1063295075"/>
+            </array>
+            <reference key="parent" ref="175589374"/>
+          </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">215</int>
+            <reference key="object" ref="1063295075"/>
+            <array class="NSMutableArray" key="children">
+              <reference ref="767558747"/>
+            </array>
+            <reference key="parent" ref="934562509"/>
+          </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">216</int>
+            <reference key="object" ref="767558747"/>
+            <reference key="parent" ref="1063295075"/>
+          </object>
         </array>
       </object>
       <dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1458,8 +1435,10 @@
         <string key="198.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="200.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="201.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-        <string key="214.IBPluginDependency">com.brandonwalkin.BWToolkit</string>
         <string key="215.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <object class="NSAffineTransform" key="215.IBViewBoundsToFrameTransform">
+          <bytes key="NSTransformStruct">P4AAAL+AAABBoAAAxBzAAA</bytes>
+        </object>
         <string key="216.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="225.CustomClassName">CommandKeyTextField</string>
         <string key="225.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1491,12 +1470,13 @@
         <string key="239.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="240.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="242.CustomClassName">LogTableTextFieldCell</string>
+        <string key="247.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
       </dictionary>
       <dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
       <nil key="activeLocalization"/>
       <dictionary class="NSMutableDictionary" key="localizations"/>
       <nil key="sourceID"/>
-      <int key="maxID">246</int>
+      <int key="maxID">247</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1725,14 +1705,6 @@
         </object>
       </array>
       <array class="NSMutableArray" key="referencedPartialClassDescriptionsV3.2+">
-        <object class="IBPartialClassDescription">
-          <string key="className">BWGradientBox</string>
-          <string key="superclassName">NSView</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">BWToolkitFramework.framework/Headers/BWGradientBox.h</string>
-          </object>
-        </object>
         <object class="IBPartialClassDescription">
           <string key="className">BWSplitView</string>
           <string key="superclassName">NSSplitView</string>
